Fixed overflow scrolling bug on site-content

--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -1,4 +1,4 @@
 // required for IE and Edge, otherwise a horizontal scrollbar appears
 .site-content {
-    overflow-x: hidden;
+    overflow: hidden;
 }
